@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@posteo.net>
-" Last Change: September 10, 2024
+" Last Change: October 6, 2024
 " Inspired By: Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -170,7 +170,8 @@ syntax keyword vifmOption contained aproposprg autocd autochpos caseoptions
 		\ smartcase scs statusline stl suggestoptions syncregs syscalls tablabel
 		\ tabline tabprefix tabscope tabstop tabsuffix tal timefmt timeoutlen title
 		\ tm trash trashdir ts tuioptions to undolevels ul vicmd viewcolumns
-		\ vifminfo vimhelp vixcmd wildmenu wmnu wildstyle wordchars wrap wrapscan ws
+		\ vifminfo vimhelp vixcmd wildinc wildmenu wmnu wildstyle wordchars wrap
+		\ wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautocd noautochpos nocf nochaselinks
